deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2026-02-19T09:16:43Z"
  generation: 2
  labels:
    app: mcp-custom-server-v3
  name: mcp-custom-server-v3
  namespace: default
  resourceVersion: "166384"
  uid: c023f30f-ba4c-4a55-a5aa-35d94ef92d79
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mcp-custom-server-v3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-02-19T10:18:54+01:00"
      # creationTimestamp: null
      labels:
        app: mcp-custom-server-v3
    spec:
      containers:
      - image: 127214178974.dkr.ecr.us-east-1.amazonaws.com/default/mcp_custom_server
        imagePullPolicy: Always
        name: mcp-custom-server-bs6tb
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-02-19T09:16:53Z"
    lastUpdateTime: "2026-02-19T09:16:53Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-02-19T09:16:43Z"
    lastUpdateTime: "2026-02-19T09:18:54Z"
    message: ReplicaSet "mcp-custom-server-v3-6db59bf975" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
