service.yml
apiVersion: v1
kind: Service
metadata:
  name: mcp-custom-server-service-v3
  namespace: default
  labels:
    app: mcp-custom-server-v3
spec:
  type: ClusterIP
  selector:
    app: mcp-custom-server-v3
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
